package com.example.vehicleapp.entity

enum class Color {
    RED,
    WHITE,
    BLUE,
    GREEN,
    YELLOW
}